src/index.css
html {
  box-sizing: border-box;
  height: 100vh;
  background-color: #fff;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.navbar {
  display: flex;
  align-items: center;
  border: solid;
  color: #c6c3d9;
  background-color: #cfcfe0;
  justify-content: space-between;
  padding: 15px 55px 25px;
  width: 100%;
  overflow: auto;
}

a {
  justify-content: space-between;
  padding: 12px;
  color: black;
  text-decoration: none;
  font-size: 17px;
  width: 15%;
  text-align: center;
  font-family: "Antic Didone", serif;
  padding: 10px 20px;
  display: block;
}


@media only screen and (max-device-width: 480px) {
  .navbar {
    flex-direction: row;
    align-items: center;
    width: 100%;
  }
  a {
    margin: 10px 0;
    float: none;
    width: 100%;
    flex-direction: row;
  }
}


h2 {
  text-align: center;
  font-family: "Prompt", sans-serif;
}
@media (min-width: 480px) and (max-width: 720px) {
  .waterfallphoto {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
    padding-top: 50px;
    width: 465px;
    height: 500px;
    float: auto;
  }
}




.project-container {
  --b: 1.5px; /* border thickness */
  --s: 5em; /* size of the corner */
  --color: #373b44;

  padding: calc(0.5em + var(--s)) calc(0.9em + var(--s));
  color: var(--color);
  --_p: var(--s);
  background: conic-gradient(
      from 90deg at var(--b) var(--b),
      #0000 90deg,
      var(--color) 0
    )
    var(--_p) var(--_p) / calc(100% - var(--b) - 2 * var(--_p))
    calc(100% - var(--b) - 2 * var(--_p));
  transition: 0.3s linear, color 0s, background-color 0s;
  outline: var(--b) solid #0000;
  outline-offset: 0.6em;
  font-size: 16px;

  border: 0;

  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.project-container:hover,
.project-container:focus-visible {
  --_p: 0px;
  outline-color: var(--color);
  outline-offset: 0.05em;
}

.project-container:active {
  background: var(--color);
  color: #fff;
}

.project-container {
  margin-top: 30px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-left: 100px;
  margin-right: 50px;
}

.projectphoto {
  max-width: 100%;
  height: auto;
}

@media only screen and (max-device-width: 480px) {
  .projectphoto {
    max-width: 100%;
  }
}

footer {
  background-color: #333;
  color: #fff;
  padding: 20px;
  text-align: center;
  margin-top: 50px;
}

.hero {
  height: 600px;
}

.contact {
  text-align: center;
}
h1 {
  text-align: center;
  font-family: "Arima Madurai", cursive;
}

h3 {
  text-align: center;
  font-family: "Prompt", sans-serif;
}

@media (min-width: 480px) {
  .castlephoto {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
    padding-top: 50px;
    width: 465px;
    height: 500px;
    float: auto;
  }
}

.header2 a {
  background-color: #dbcde8;
  border: 1px solid #422800;
  border-radius: 30px;
  box-shadow: #422800 4px 4px 0 0;
  color: #422800;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  font-size: 18px;
  padding: 0 18px;
  line-height: 50px;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.header2 a:hover {
  background-color: #fff;
}

.header2 a:active {
  box-shadow: #422800 2px 2px 0 0;
  transform: translate(2px, 2px);
}

@media (min-width: 768px) {
  .header2 a {
    min-width: 120px;
    padding: 0 25px;
  }
}

.contact-container {
  display: flex;
  align-items: center;
  gap: 30px;
  flex-direction: column;
}

.contact-container2 {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.resumedownload {
  display: flex;
  flex-direction: column;
  text-align: center;
}

.downloadmyresumebutton {
  display: flex;
  text-align: center;
  color: blue;
  align-items: center;
  padding-left: 90px;
}

@media (min-width: 480px) {
  .resumeimg {
    display: flex;
    flex-direction: column;
    text-align: center;
  }
}

.resume-container {
  display: flex;
  flex-direction: column;
  height: 100%;
  align-items: center;
}

.downloadmyresumebutton {
  align-items: center;
  background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
  border: 0;
  border-radius: 8px;
  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
  box-sizing: border-box;
  color: #ffffff;
  display: flex;
  font-family: Phantomsans, sans-serif;
  font-size: 20px;
  justify-content: center;
  line-height: 1em;
  max-width: 500px;
  min-width: 300px;
  padding: 3px;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  white-space: nowrap;
  cursor: pointer;
}

.downloadmyresumebutton:active,
.downloadmyresumebutton:hover {
  outline: 0;
}

.downloadmyresumebutton span {
  background-color: rgb(5, 6, 45);
  padding: 16px 24px;
  border-radius: 6px;
  width: 500%;
  height: 500%;
  transition: 300ms;
}

.downloadmyresumebutton:hover span {
  background: none;
}

@media (min-width: 768px) {
  .downloadmyresumebutton {
    font-size: 24px;
    min-width: 300px;
  }
}

.contact-container a {
  --color: #d3d1e0;
  position: relative;
  z-index: 1;
}

.contact-container a::before {
  content: "";
  position: absolute;
  width: 30px;
  height: 30px;
  background: transparent;
  top: -7px;
  left: -7px;
  z-index: -5;
  border-top: 3px solid var(--color);
  border-left: 3px solid var(--color);
  transition: 0.5s;
}

.contact-container a::after {
  content: "";
  position: absolute;
  width: 30px;
  height: 30px;
  background: transparent;
  bottom: -7px;
  right: -7px;
  z-index: -5;
  border-right: 3px solid var(--color);
  border-bottom: 3px solid var(--color);
  transition: 0.5s;
}

.contact-container a:hover::before {
  width: 100%;
  height: 100%;
}

.contact-container a:hover::after {
  width: 100%;
  height: 100%;
}

.contact-container a button {
  padding: 0.7em 2em;
  font-size: 16px;
  border: none;
  cursor: pointer;
  font-family: inherit;
}

